--- a/theme.yaml
+++ b/theme.yaml
@@ -5,5 +5,5 @@ author:
   website: https://ghost.org
 description:
 logo: https://avatars1.githubusercontent.com/u/2178663?s=200&v=4
-repo: https://github.com/halo-dev/halo-theme-casper
+website: https://github.com/halo-dev/halo-theme-casper
 version: 1.0
