--- a/theme.yaml
+++ b/theme.yaml
@@ -6,4 +6,5 @@ author:
 description:
 logo: https://avatars1.githubusercontent.com/u/2178663?s=200&v=4
 website: https://github.com/halo-dev/halo-theme-casper
+repo: https://github.com/halo-dev/halo-theme-casper
 version: 1.0
