--- a/theme.yaml
+++ b/theme.yaml
@@ -7,4 +7,5 @@ description:
 logo: https://avatars1.githubusercontent.com/u/2178663?s=200&v=4
 website: https://github.com/halo-dev/halo-theme-casper
 repo: https://github.com/halo-dev/halo-theme-casper
-version: 1.7
+version: 1.8
+require: 1.3.0
