--- a/theme.yaml
+++ b/theme.yaml
@@ -5,13 +5,13 @@ spec:
   author:
     name: Ghost
     website: https://ghost.org
-  description: null
+  description:
   logo: https://avatars1.githubusercontent.com/u/2178663?s=200&v=4
   website: https://github.com/halo-dev/halo-theme-casper
   repo: https://github.com/halo-dev/halo-theme-casper
-  settingName: halo-setting-casper
-  configMapName: halo-map-casper
-  version: 0.0.0
-  require: "2.0"
+  settingName: theme-casper-setting
+  configMapName: theme-casper-configMap
+  version: 2.0.0
+  require: ">=2.8.0"
 metadata:
   name: halo-theme-casper
