--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "casper",
-  "description": "A clean, minimal default theme for the Ghost publishing platform",
-  "demo": "https://demo.ghost.io",
-  "version": "5.7.0",
-  "engines": {
-      "ghost": ">=5.0.0"
-  },
+  "name": "theme-casper",
+  "description": "A clean, minimal theme for Halo, migrated from the Casper theme of Ghost",
+  "version": "2.0.0",
   "license": "MIT",
   "screenshots": {
       "desktop": "assets/screenshot-desktop.jpg",
@@ -22,28 +18,22 @@
       "postship": "git fetch && gulp release"
   },
   "author": {
-      "name": "Ghost Foundation",
-      "email": "hello@ghost.org",
-      "url": "https://ghost.org/"
-  },
-  "gpm": {
-      "type": "theme",
-      "categories": [
-          "Minimal",
-          "Magazine"
-      ]
+      "name": "Halo OSS Team",
+      "email": "hi@halo.run",
+      "url": "https://halo.run/"
   },
   "keywords": [
+      "halo",
       "ghost",
       "theme",
-      "ghost-theme"
+      "ghost-theme",
+      "halo-theme"
   ],
   "repository": {
       "type": "git",
-      "url": "https://github.com/TryGhost/Casper.git"
+      "url": "https://github.com/halo-dev/theme-casper.git"
   },
-  "bugs": "https://github.com/TryGhost/Casper/issues",
-  "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+  "bugs": "https://github.com/halo-dev/theme-casper/issues",
   "devDependencies": {
       "@tryghost/release-utils": "0.8.1",
       "autoprefixer": "10.4.7",
@@ -61,115 +51,6 @@
       "postcss-color-mod-function": "3.0.3",
       "postcss-easy-import": "4.0.0",
       "pump": "3.0.0"
-  },
-  "browserslist": [
-      "defaults"
-  ],
-  "config": {
-      "posts_per_page": 25,
-      "image_sizes": {
-          "xxs": {
-              "width": 30
-          },
-          "xs": {
-              "width": 100
-          },
-          "s": {
-              "width": 300
-          },
-          "m": {
-              "width": 600
-          },
-          "l": {
-              "width": 1000
-          },
-          "xl": {
-              "width": 2000
-          }
-      },
-      "card_assets": true,
-      "custom": {
-          "navigation_layout": {
-              "type": "select",
-              "options": [
-                  "Logo on cover",
-                  "Logo in the middle",
-                  "Stacked"
-              ],
-              "default": "Logo on cover"
-          },
-          "title_font": {
-              "type": "select",
-              "options": [
-                  "Modern sans-serif",
-                  "Elegant serif"
-              ],
-              "default": "Modern sans-serif"
-          },
-          "body_font": {
-              "type": "select",
-              "options": [
-                  "Modern sans-serif",
-                  "Elegant serif"
-              ],
-              "default": "Elegant serif"
-          },
-          "show_publication_cover": {
-              "type": "boolean",
-              "default": true,
-              "group": "homepage"
-          },
-          "header_style": {
-              "type": "select",
-              "options": [
-                  "Center aligned",
-                  "Left aligned",
-                  "Hidden"
-              ],
-              "default": "Center aligned",
-              "group": "homepage"
-          },
-          "feed_layout": {
-              "type": "select",
-              "options": [
-                  "Classic",
-                  "Grid",
-                  "List"
-              ],
-              "default": "Classic",
-              "group": "homepage"
-          },
-          "color_scheme": {
-              "type": "select",
-              "options": [
-                  "Light",
-                  "Dark",
-                  "Auto"
-              ],
-              "default": "Light"
-          },
-          "post_image_style": {
-              "type": "select",
-              "options": [
-                  "Wide",
-                  "Full",
-                  "Small",
-                  "Hidden"
-              ],
-              "default": "Wide",
-              "group": "post"
-          },
-          "email_signup_text": {
-              "type": "text",
-              "default": "Sign up for more like this.",
-              "group": "post"
-          },
-          "show_recent_posts_footer": {
-              "type": "boolean",
-              "default": true,
-              "group": "post"
-          }
-      }
   },
   "renovate": {
       "extends": [
