feat: 增加用户元数据设置及展示

--- a/annotation-settings.yaml
+++ b/annotation-settings.yaml
@@ -16,3 +16,27 @@ apiVersion: v1alpha1
 kind: AnnotationSetting
 metadata:
   name: theme-casper-page
+
+---
+
+spec:
+  targetRef:
+    group: ""
+    kind: User
+  formSchema:
+    - $formkit: text
+      name: location
+      label: 位置
+      value: "深圳"
+    - $formkit: url
+      name: website
+      label: 网址
+      value: "https://www.halo.run"
+    - $formkit: text
+      name: location
+      label: 位置
+      value: "深圳"
+apiVersion: v1alpha1
+kind: AnnotationSetting
+metadata:
+  name: theme-casper-user
