ci: 修改打包脚本并增加action

--- a/package.json
+++ b/package.json
@@ -3,19 +3,12 @@
   "description": "A clean, minimal theme for Halo, migrated from the Casper theme of Ghost",
   "version": "2.0.0",
   "license": "MIT",
-  "screenshots": {
-      "desktop": "assets/screenshot-desktop.jpg",
-      "mobile": "assets/screenshot-mobile.jpg"
-  },
   "scripts": {
       "dev": "gulp",
       "zip": "gulp zip",
       "test": "gscan .",
       "test:ci": "gscan --fatal --verbose .",
-      "pretest": "gulp build",
-      "preship": "yarn test",
-      "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; else echo \"Uncomitted changes found.\" && exit 1; fi",
-      "postship": "git fetch && gulp release"
+      "build": "gulp build"
   },
   "author": {
       "name": "Halo OSS Team",
